<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:visibility="visible"
            android:background="#30363d"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_icon"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="13dp"
                android:src="@drawable/left_avater_small_d"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_no_login"
                android:id="@+id/item_name"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/item_icon"
                android:layout_marginLeft="10dp"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/arrow"
                android:layout_alignBottom="@+id/item_icon"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/left_common_up"
                android:layout_centerInParent="true"
                android:layout_gravity="center"/>

    </RelativeLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:id="@+id/user_no_login_layout">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center"
                    android:src="@drawable/left_avater_big_d"
                    android:layout_marginTop="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/user_no_login"
                    android:id="@+id/textView"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
         </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_qq_login"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/left_qq_login_d"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_sina_login"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/left_sina_login_d"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/left_qq_weibo_d"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/user_login_tip"
                    android:id="@+id/textView"
                    android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_login_avater"
                    android:layout_gravity="center"
                    android:src="@drawable/left_avater_big_d"
                    android:layout_marginTop="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/login_user_name"
                    android:layout_gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/login_email"
                    android:layout_gravity="center"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/login_fav_label"
                        android:id="@+id/login_fav"
                        android:layout_gravity="center_horizontal|top"
                        android:layout_marginLeft="20dp"/>

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/login_fav_count"
                        android:layout_gravity="center_horizontal|top"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/left_user_label"
                        android:id="@+id/textView2"
                        android:layout_gravity="center_horizontal|top"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/login_label"
                        android:layout_gravity="center_horizontal|top"
                        android:layout_marginLeft="20dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/left_relate_account"
                    android:id="@+id/textView3"
                    android:paddingLeft="20dp"/>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="62dp"
                    android:layout_gravity="center">

                <ImageView
                        android:layout_width="7dp"
                        android:layout_height="50dp"
                        android:id="@+id/imageView4"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:src="@color/qq_white"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@id/left_bound_name"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imageView4"
                        android:layout_marginLeft="18dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/left_bound_email"
                        android:layout_below="@id/left_bound_name"
                        android:layout_alignLeft="@id/left_bound_name"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
